Unstyled weather info in webapp

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,7 @@
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#history">Contact</a></li>
                         </ul>
                         <!-- form class="navbar-form pull-right">
                             <input class="span2" type="text" placeholder="Email">
@@ -75,6 +74,7 @@
         <script src="js/router.js"></script>
 
         <!-- Application Scripts -->
+        <script src="js/settings.js"></script>
         <script src="js/roost.js"></script>
     </body>
 </html>
