--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+        <!-- link rel="stylesheet" href="css/bootstrap-responsive.min.css" -->
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
