--- a/web/public/index.html
+++ b/web/public/index.html
@@ -61,11 +61,10 @@
 
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+        <script src="js/vendor/jquery-1.9.1.min.js"><\/script>
         <script src="js/vendor/bootstrap.min.js"></script>
 
-        <!-- Optional libraries -->
+        <!-- Optional libraries FIXME load these locally!-->
         <script src='//cdnjs.cloudflare.com/ajax/libs/sugar/1.3.9/sugar.min.js'></script>
         <script src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js'></script>
         <!-- script type="text/javascript" src="https://raw.github.com/joewalnes/reconnecting-websocket/master/reconnecting-websocket.js" -->
