--- a/web/public/index.html
+++ b/web/public/index.html
@@ -65,8 +65,8 @@
         <script src="js/vendor/bootstrap.min.js"></script>
 
         <!-- Optional libraries FIXME load these locally!-->
-        <script src='//cdnjs.cloudflare.com/ajax/libs/sugar/1.3.9/sugar.min.js'></script>
-        <script src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js'></script>
+        <script src="js/vendor/underscore-min.js"></script>
+        <script src="js/vendor/sugar.min.js"></script>
         <!-- script type="text/javascript" src="https://raw.github.com/joewalnes/reconnecting-websocket/master/reconnecting-websocket.js" -->
 
         <!-- Strapper router -->
@@ -75,5 +75,8 @@
         <!-- Application Scripts -->
         <script src="js/settings.js"></script>
         <script src="js/roost.js"></script>
+        <script type='text/javascript'>
+            $(document).ready(routerOnReady);
+        </script>
     </body>
 </html>
