--- a/web/public/index.html
+++ b/web/public/index.html
@@ -29,17 +29,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="appName brand" href="#home">Strapper</a>
+                    <a class="appName brand" href="#home">Roost</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li><a href="#home">Home</a></li>
-                            <li><a href="#history">Contact</a></li>
+                            <li><a href="#devices">Devices</a></li>
+                            <li><a href="#history">History</a></li>
                         </ul>
-                        <!-- form class="navbar-form pull-right">
-                            <input class="span2" type="text" placeholder="Email">
-                            <input class="span2" type="password" placeholder="Password">
-                            <button type="submit" class="btn">Sign in</button>
-                        </form -->
                     </div>
                 </div>
             </div>
