Changing web UI to use new property format

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -55,6 +55,11 @@
             </span>
           </div>
 
+          <!-- Humidity Well -->
+          <div class='row-fluid top-margin humidity-row'>
+            <span class='well humidity'></span>
+          </div>
+
         </div>
 
         <script src="js/vendor/jquery-1.9.1.min.js"><\/script>
